// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardFooterBasicControls should render "cancel", "previous" and "next" buttons 1`] = `
<Fragment>
  <Button
    content="Cancel"
    type="button"
  />
  <Button
    content="Previous"
    onClick={[Function]}
    type="button"
  />
  <Button
    content="Next"
    onClick={[Function]}
    primary={true}
    type="submit"
  />
</Fragment>
`;

exports[`WizardFooterBasicControls should render custom buttons when given 1`] = `
<Fragment>
  <Button
    content="Custom Cancel"
    type="button"
  />
  <Button
    className="customPreviousClass"
    content="Custom Previous"
    onClick={[Function]}
    type="button"
  />
  <Button
    className="customNextClass"
  >
    Custom Next
  </Button>
</Fragment>
`;

exports[`WizardFooterBasicControls when the "showBackOnFirstStep" prop is true when the current step is the first step should render "cancel", "previous" and "next" buttons 1`] = `
<Fragment>
  <Button
    content="Cancel"
    type="button"
  />
  <Button
    content="Previous"
    onClick={[Function]}
    type="button"
  />
  <Button
    content="Next"
    onClick={[Function]}
    primary={true}
    type="submit"
  />
</Fragment>
`;

exports[`WizardFooterBasicControls when the "showSaveButton" prop is set to "true" should render "cancel", "previous", "save" and "next" buttons 1`] = `
<Fragment>
  <Button
    content="Cancel"
    type="button"
  />
  <Button
    content="Save"
    type="submit"
  />
  <Button
    content="Previous"
    onClick={[Function]}
    type="button"
  />
  <Button
    content="Next"
    onClick={[Function]}
    primary={true}
    type="submit"
  />
</Fragment>
`;

exports[`WizardFooterBasicControls when the current step is the first step should render "cancel" and "next" buttons 1`] = `
<Fragment>
  <Button
    content="Cancel"
    type="button"
  />
  <Button
    content="Next"
    onClick={[Function]}
    primary={true}
    type="submit"
  />
</Fragment>
`;

exports[`WizardFooterBasicControls when the current step is the last step should render "cancel", "previous" and "finish" buttons 1`] = `
<Fragment>
  <Button
    content="Cancel"
    type="button"
  />
  <Button
    content="Previous"
    onClick={[Function]}
    type="button"
  />
  <Button
    content="Finish"
    primary={true}
    type="submit"
  />
</Fragment>
`;
